k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traffic-light
  namespace: traffic-light
  labels:
    app: traffic-light
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: traffic-light
